--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -59,7 +59,8 @@ requirements:
 
 about:
   home: https://www.gaia-gis.it/fossil/libspatialite/index
-  license: LGPL-2.1
+  license: LGPL-2
+  license_family: LGPL
   license_file: COPYING
   summary: 'Extend the SQLite core to support fully fledged Spatial SQL capabilities'
 
